--- a/index.html
+++ b/index.html
@@ -164,6 +164,16 @@
 </div>
 </body>
 <footer>
+	<div itemscope itemtype="http://schema.org/LocalBusiness" hidden>
+		<h1 itemprop="name">Nina Carducci</h1>
+		<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+		  <span itemprop="streetAddress">68 avenue Alsace-Lorraine</span>,
+		  <span itemprop="postalCode">33200</span>
+		  <span itemprop="addressLocality">Bordeaux</span>
+		</span>
+		<span itemprop="telephone">05 56 67 78 89</span>
+		<meta itemprop="openingHours" content="Mo-Fr 10:00-19:00">
+	</div>	  
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
